# C_Notes

./: .gitignore  README.md  Untitled-1.c  hello.c
CASIA-master/HWDB/: HWDB.vcxproj.filters
CNN/CNN/: minst.cpp
C_Note/MineWin/: MineWin.sln  MineWin.vcxproj  game.cpp  game.h  test.cpp
C_Note/Project1/: Project1.sln  Project1.vcxproj  源.cpp
C_Note/Project2/: 1001.txt  1002.txt  Hello.txt  Project2.sln  Project2.vcxproj  Project2.vcxproj.filters  b.txt  (+6 more)
Cryptology/: .txt  AES_Brian Gladman.txt  新建 文本文档.txt
Dev_Cpp/: Untitled2.c
Dev_Cpp&Pelles_C/: Untitled1.cpp
Goal_Final/: Course.c  Goal Final.sln  Goal Final.vcxproj  Goal Final.vcxproj.filters  Grade.c  Menu.c  head  head.h  main.c  请先阅读.txt
Goal_Final(array)/: Course.c  Final.c  Goal Final(array).sln  Goal Final(array).vcxproj  Goal Final(array).vcxproj.filters  Grade.c  Menu.c  file.txt  head.h  main.c
Network/: ClientUI.rar
Network/New_DCN/ClientUI/: CMakeLists.txt  Client.h  ClientAPI.cpp  ClientAPI.h  ClientUI.cpp  ClientUI.h  main.cpp  stdafx.h
Network/New_DCN/Server/: CMakeLists.txt  Server.cpp  Server.h
Project（2019）/: Project（2019）.sln  Project（2019）.vcxproj  源.cpp
RSA_by_llama/: RSA_by_llama.sln  RSA_by_llama.vcxproj  main.cpp
halloworld/: halloworld.sln  halloworld.vcxproj  源.cpp
hanoi/: hanoi.sln  hanoi.vcxproj  源.cpp
project24f-main/: README.md
扫雷（2019）/: Mine_Sweeper.h  My_Sweeper.cpp  test.cpp  扫雷（2019）.sln  扫雷（2019）.vcxproj  扫雷（2019）.vcxproj.filters
数组——三子棋（2019）/: InitBoard.cpp  game.cpp  game.h  数组——三子棋（2019）.sln  数组——三子棋（2019）.vcxproj  数组——三子棋（2019）.vcxproj.filters
(+896 files in other folders)
